# rust-aws-lambda

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.run/: Build Release.run.xml  Build.run.xml  Lambda Watch.run.xml  Lambda.run.xml
lambda-api/: Cargo.toml
lambda-api/src/: main.rs
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
